--- a/웹프기말과제/detail.html
+++ b/웹프기말과제/detail.html
@@ -49,11 +49,20 @@
     }
   </style>
 </head>
+
 <body>
-  <div class="detail-container" id="restaurantDetail">
-    <!-- 식당 정보가 여기에 삽입됨 -->
+  <div id="restaurant-detail">
+    <h2 id="name"></h2>
+    <p><strong>주소:</strong> <span id="address"></span></p>
+    <p><strong>전화번호:</strong> <span id="phone"></span></p>
+    <p><strong>평점:</strong> <span id="rating"></span></p>
+    <p><strong>카테고리:</strong> <span id="category"></span></p>
+    <p><strong>대표 리뷰:</strong> <span id="review"></span></p>
+    <div id="tags" class="tags"></div>
+    <button id="more-link">가게 더 살펴보기</button>
   </div>
 
-  <script src="js/detail.js"></script>
+  <script src="detail.js"></script>
 </body>
+
 </html>
