--- a/웹프기말과제/detail.html
+++ b/웹프기말과제/detail.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>맛집 상세보기 - 밥부기</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <style>
     .detail-container {
