--- a/웹프기말과제/index.html
+++ b/웹프기말과제/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>밥부기</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -12,11 +15,14 @@
     <h1> 밥부기</h1>
     
 <div class="container">
-  <input type="text" id="searchInput" placeholder="먹고 싶은 음식이나 가게 이름을 검색하세요">
-  <button class="blue-btn" onclick="searchRestaurant()">🔍 검색</button>
-
+  <div class="search-box">
+    <img src="images/부기2.png" alt="부기 캐릭터" class="inline-babbugi">
+    <input type="text" id="searchInput" placeholder="먹고 싶은 음식이나 가게 이름을 검색하세요">
+    <button class="blue-btn" onclick="searchRestaurant()">🔍 검색</button>
+  </div>
   <div id="searchResults" class="restaurant-list"></div>
 </div>
+
 
     <br>
     <button id="randomBtn">랜덤 메뉴 추천받기</button>
