--- a/웹프기말과제/index.html
+++ b/웹프기말과제/index.html
@@ -16,7 +16,7 @@
     
 <div class="container">
   <div class="search-box">
-    <img src="images/부기2.png" alt="부기 캐릭터" class="inline-babbugi">
+    <img id="serchIcon" src="images/부기2.png" alt="부기 캐릭터" class="inline-babbugi" style="cursor: pointer;">
     <input type="text" id="searchInput" placeholder="먹고 싶은 음식이나 가게 이름을 검색하세요">
     <button class="blue-btn" onclick="searchRestaurant()">🔍 검색</button>
   </div>
