--- a/웹프기말과제/detail.html
+++ b/웹프기말과제/detail.html
@@ -3,30 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>맛집 상세보기 - 밥부기</title>
+
+  <!-- 구글 폰트 사전 연결 및 로드 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+
+  <!-- 외부 CSS 파일 연결 -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- 페이지 전용 스타일 -->
   <style>
-     body, button {
-     font-family: 'Gowun Dodum';
-     background-color: #88aad7;
-     color:#FFF;
+    /* 전체 배경과 폰트 스타일 지정 */
+    body, button {
+      font-family: 'Gowun Dodum';
+      background-color: #88aad7;
+      color: #FFF;
     }
+
+    /* 제목 계열 요소 스타일 (배경색 및 라운딩 포함) */
     h2, h3, h4 {
-     font-family: 'Gowun Dodum';
-     background-color: #002E6E;
-     color:#FFF;
-     padding: 0.5rem;     
-     border-radius: 10px;     
-     display: inline-block; 
+      font-family: 'Gowun Dodum';
+      background-color: #002E6E;
+      color: #FFF;
+      padding: 0.5rem;
+      border-radius: 10px;
+      display: inline-block;
     }
+
+    /* 본문 텍스트 및 큰 제목 배경 흰색 처리 */
     h1, p {
-     font-family: 'Gowun Dodum';
-     background-color: #FFF;
-     color:#000
+      font-family: 'Gowun Dodum';
+      background-color: #FFF;
+      color: #000;
     }
-    
+
+    /* 상세 컨테이너 레이아웃 및 박스 스타일 */
     .detail-container {
       position: relative;
       max-width: 800px;
@@ -37,12 +49,14 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
+    /* 메뉴 항목 개별 정렬 */
     .menu-item {
       display: flex;
       align-items: center;
       margin: 1rem 0;
     }
 
+    /* 메뉴 이미지 스타일 */
     .menu-item img {
       width: 100px;
       height: 100px;
@@ -51,22 +65,26 @@
       border-radius: 8px;
     }
 
+    /* 리뷰 영역 상단 마진 */
     .review-box {
       margin-top: 2rem;
     }
 
+    /* 개별 리뷰 스타일 */
     .review {
       border-top: 1px solid #ccc;
       padding: 0.5rem 0;
-      color:#000
+      color: #000;
     }
 
+    /* 지도 영역 크기 지정 */
     #map {
       width: 100%;
       height: 300px;
       margin-top: 1rem;
     }
 
+    /* 파란색 버튼 스타일 */
     .blue-btn {
       background-color: #002E6E;
       color: white;
@@ -77,25 +95,27 @@
       font-size: 1rem;
       margin-top: 1rem;
     }
+
+    /* 대표 이미지 스타일 */
     .restaurant-img {
-     width: 30%;
-     height: auto;
-     max-height: 400px;
-     object-fit: cover;
-     border-radius: 10px;
-     margin-bottom: 1rem;
-     margin: 20px 0 16px 20px; /* 상 우 하 좌 */
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 30%;
+      height: auto;
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin: 20px 0 16px 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
+    /* 헤더 영역: 이미지와 텍스트 나란히 */
     .header-section {
-    display: flex;
-    align-items: center; /* 이미지와 텍스트를 세로 가운데 정렬 */
-    gap: 20px;
-    margin-bottom: 20px;
-    /* 메뉴 그리드 스타일 추가 */
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
     }
-    
+
+    /* 메뉴 카드 그리드 구성 */
     .menu-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -104,6 +124,7 @@
       margin-top: 1rem;
     }
 
+    /* 메뉴 카드 스타일 */
     .menu-card {
       background-color: #f8f9fa;
       border: 1px solid #e9ecef;
@@ -113,11 +134,13 @@
       color: #000;
     }
 
+    /* 메뉴 카드 hover 효과 */
     .menu-card:hover {
       transform: translateY(-2px);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
+    /* 메뉴 카드 내 제목 */
     .menu-card strong {
       display: block;
       color: #002E6E;
@@ -125,25 +148,27 @@
       margin-bottom: 0.5rem;
     }
 
+    /* 메뉴 가격 텍스트 스타일 */
     .menu-card .price {
       color: #666;
       font-size: 0.95rem;
     }
 
-
+    /* 반응형 - 태블릿 이하에서 메뉴 그리드 2열 */
     @media (max-width: 768px) {
       .menu-grid {
         grid-template-columns: repeat(2, 1fr);
       }
     }
 
+    /* 반응형 - 모바일에서는 1열 */
     @media (max-width: 480px) {
       .menu-grid {
         grid-template-columns: 1fr;
       }
     }
 
-
+    /* 레스토랑 이름과 설명 텍스트 스타일 */
     .restaurant-info h1 {
       margin: 0;
       font-size: 2.5rem;
@@ -157,6 +182,8 @@
     .restaurant-info p {
       margin: 4px 0;
     }
+
+    /* 닫기 버튼 위치 및 스타일 */
     .close-btn {
       position: absolute;
       top: 1rem;
@@ -172,15 +199,20 @@
     .close-btn:hover {
       color: #000;
     }
-
   </style>
 </head>
 
 <body>
+  <!-- 상세보기 컨테이너 -->
   <div class="detail-container">
+    <!-- 닫기 버튼 -->
     <button class="close-btn" onclick="goHome()">✖</button>
+
+    <!-- 식당 정보가 동적으로 삽입될 영역 -->
     <div id="restaurantDetail"></div>
   </div>
 
+  <!-- 상세 스크립트 로딩 -->
   <script src="js/detail.js"></script>
+</body>
 </html>
